--- a/pppppp/View/AuthView/SettingView.storyboard
+++ b/pppppp/View/AuthView/SettingView.storyboard
@@ -16,19 +16,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cKJ-b3-s25">
-                                <rect key="frame" x="131" y="642" width="152" height="32"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="32" id="PID-ey-iFj"/>
-                                    <constraint firstAttribute="width" constant="152" id="by3-TW-3El"/>
-                                </constraints>
-                                <color key="tintColor" systemColor="systemPinkColor"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="tinted" title="DeleteAccount"/>
-                                <connections>
-                                    <action selector="deleteAccount" destination="hPF-NO-teZ" eventType="touchUpInside" id="aOt-Nx-UJV"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IhW-ib-xFo">
                                 <rect key="frame" x="131" y="694" width="152" height="32"/>
                                 <constraints>
@@ -42,19 +29,6 @@
                                     <action selector="sceneGoogleForm" destination="hPF-NO-teZ" eventType="touchUpInside" id="Ubv-b2-bej"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rm5-xE-aWy">
-                                <rect key="frame" x="131" y="590" width="152" height="32"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="152" id="X36-CP-SAg"/>
-                                    <constraint firstAttribute="height" constant="32" id="j51-9S-Kjb"/>
-                                </constraints>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="tinted" title="Logout"/>
-                                <connections>
-                                    <action selector="logoutButton" destination="hPF-NO-teZ" eventType="touchUpInside" id="MKU-G4-VQS"/>
-                                </connections>
-                            </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="LOT-lE-mHP">
                                 <rect key="frame" x="16" y="92" width="382" height="128"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -62,28 +36,76 @@
                                     <constraint firstAttribute="height" constant="128" id="g3u-xR-tsM"/>
                                 </constraints>
                             </tableView>
+                            <tableView clipsSubviews="YES" tag="1" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="NlC-XF-2YB">
+                                <rect key="frame" x="16" y="244" width="382" height="128"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="hEV-dV-cKZ"/>
+                                </constraints>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="hrq-yP-Y2a"/>
                         <color key="backgroundColor" red="0.074509803920000006" green="0.0" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="IhW-ib-xFo" firstAttribute="centerX" secondItem="Oo8-Nn-8l5" secondAttribute="centerX" id="2M2-3N-aNJ"/>
-                            <constraint firstItem="IhW-ib-xFo" firstAttribute="top" secondItem="cKJ-b3-s25" secondAttribute="bottom" constant="20" id="Gi2-CT-0SZ"/>
+                            <constraint firstItem="NlC-XF-2YB" firstAttribute="leading" secondItem="hrq-yP-Y2a" secondAttribute="leading" constant="16" id="GbQ-Ub-z9Y"/>
                             <constraint firstItem="hrq-yP-Y2a" firstAttribute="trailing" secondItem="LOT-lE-mHP" secondAttribute="trailing" constant="16" id="Hk6-hd-8SO"/>
                             <constraint firstItem="LOT-lE-mHP" firstAttribute="leading" secondItem="hrq-yP-Y2a" secondAttribute="leading" constant="16" id="HmU-el-ivu"/>
                             <constraint firstItem="hrq-yP-Y2a" firstAttribute="bottom" secondItem="IhW-ib-xFo" secondAttribute="bottom" constant="136" id="Kgk-uB-Ico"/>
-                            <constraint firstItem="cKJ-b3-s25" firstAttribute="top" secondItem="rm5-xE-aWy" secondAttribute="bottom" constant="20" id="PEI-9b-21B"/>
-                            <constraint firstItem="cKJ-b3-s25" firstAttribute="centerX" secondItem="Oo8-Nn-8l5" secondAttribute="centerX" id="XcI-x8-ZtJ"/>
-                            <constraint firstItem="rm5-xE-aWy" firstAttribute="centerX" secondItem="Oo8-Nn-8l5" secondAttribute="centerX" id="bjg-3F-1Ll"/>
+                            <constraint firstItem="hrq-yP-Y2a" firstAttribute="trailing" secondItem="NlC-XF-2YB" secondAttribute="trailing" constant="16" id="VI6-5t-ra7"/>
                             <constraint firstItem="LOT-lE-mHP" firstAttribute="top" secondItem="hrq-yP-Y2a" secondAttribute="top" constant="48" id="rAf-94-TIm"/>
+                            <constraint firstItem="NlC-XF-2YB" firstAttribute="top" secondItem="LOT-lE-mHP" secondAttribute="bottom" constant="24" id="tRk-qg-Oj2"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="tableView" destination="LOT-lE-mHP" id="h6I-4W-L1t"/>
+                        <outlet property="accountTableView" destination="NlC-XF-2YB" id="Rdn-Fu-OFd"/>
+                        <outlet property="accumulationTypetableView" destination="LOT-lE-mHP" id="8aO-Si-d0o"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vfp-GC-Waq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2073.913043478261" y="428.57142857142856"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="cpW-W8-c4y">
+            <objects>
+                <viewController id="5r7-i0-bq5" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="d39-QC-2YW">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rm5-xE-aWy">
+                                <rect key="frame" x="102" y="632" width="152" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="152" id="X36-CP-SAg"/>
+                                    <constraint firstAttribute="height" constant="32" id="j51-9S-Kjb"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="Logout"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cKJ-b3-s25">
+                                <rect key="frame" x="175" y="719" width="152" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="32" id="PID-ey-iFj"/>
+                                    <constraint firstAttribute="width" constant="152" id="by3-TW-3El"/>
+                                </constraints>
+                                <color key="tintColor" systemColor="systemPinkColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="DeleteAccount"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="GB7-es-Bk4"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="cKJ-b3-s25" firstAttribute="centerX" secondItem="d39-QC-2YW" secondAttribute="centerX" constant="44" id="God-2x-PnK"/>
+                            <constraint firstItem="rm5-xE-aWy" firstAttribute="centerX" secondItem="d39-QC-2YW" secondAttribute="centerX" constant="-29" id="LO0-qQ-anX"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8d6-Hf-yeB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2760" y="388"/>
         </scene>
     </scenes>
     <resources>
